# NoWordChat

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  main.cpp
inc/: ChatWebSocket.hpp
libs/BidirectionalMessenger/: CMakeLists.txt
libs/BidirectionalMessenger/inc/: Client.hpp  client.hpp  server.hpp
libs/BidirectionalMessenger/src/: Client.cpp  Server.cpp  client.cpp  server.cpp
scripts/drogon_web_socket_demo/: CMakeLists.txt  client.cpp  server.cpp
src/: ChatWebSocket.cpp  main.cpp
ui/: config.json  index.html
